# CogniMesh

./: .gitignore  .pr_agent.toml  Makefile  PLAN.md  README.md  cognimesh.html  cognimesh_handover.md  docker-compose.yml  pyproject.toml
.claude/state/: last_turn_duration.txt  turn_durations.json  turn_start_timestamp.txt
.github/workflows/: ci.yml  qodo-review.yml
benchmark/: conftest.py
benchmark/cognimesh_app/: app.py  setup.py
benchmark/cognimesh_app/use_cases/: uc01_customer_health.json  uc02_top_products.json  uc03_at_risk_customers.json  uc04_revenue_by_region.json  uc05_customer_ltv.json  uc06_customer_orders_summary.json  (+14 more)
benchmark/data/: schema.sql  schema_scale.sql  schema_triggers.sql  seed.py  seed_scale.py
benchmark/harness/: metrics.py  report.py
benchmark/rest_api/: app.py  database.py  gold_tables.sql  middleware.py  models.py
benchmark/results/: report.html  report.md  results.json
benchmark/tests/: test_dbook_integration.py  test_marginal_cost.py  test_performance.py  test_properties.py  test_refresh_and_deps.py  test_resilience_schema_drift.py  test_resilience_staleness.py  test_resilience_unsupported_uc.py  test_scale_benchmark.py  test_throughput.py
cognimesh_core/: __init__.py  approval.py  audit.py  capability_index.py  config.py  db.py  dbook_bridge.py  dependency.py  gateway.py  gold_manager.py  lineage.py  mcp_server.py  models.py  query_composer.py  refresh_manager.py  registry.py  sqlmesh_adapter.py
cognimesh_core/sqlmesh_project/: config.yaml
docs/: approval-queue.md  architecture.md  benchmark.md  dbook-integration.md  onepager.html  running-the-benchmark.md
docs/research/: meta_analytics_agent_analysis.md  mlops_memory_layer_analysis.md
(+22 files in other folders)
