[project]
name = "cognimesh"
version = "0.1.0"
description = "Intelligent data mesh layer between AI agents and structured data platforms"
requires-python = ">=3.11"
license = "Apache-2.0"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psycopg[binary,pool]>=3.1",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
bench = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "pytest-asyncio>=0.23",
    "faker>=28.0",
    "radon>=6.0",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["benchmark/tests"]
asyncio_mode = "auto"
